BE-#4 Restructure API routes
